# mariocesar

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CNAME  Dockerfile  Justfile  Makefile  README.md  TODO.md  index.html  jsconfig.json  main.py  mirror.list  netlify.toml  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  requirements.in  requirements.txt  robots.txt  show_system.sql  sitemap.xml  tailwind.config.js  vercel.json
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml
.github/workflows/python/: action.yml
_next/data/CVckHIkazo45AVi2-dokf/: index.json
_next/data/lenukB3nWj7hjCI0XZVct/: index.json
_next/data/n3_TtWbl-3h9QS3Kiki8a/: index.json
_next/static/2v0j5zCt_MS5lC3N2Jco2/: _buildManifest.js
_next/static/CVckHIkazo45AVi2-dokf/: _buildManifest.js
_next/static/DID5FK7q-gs5mPmiVwxyQ/: _buildManifest.js
_next/static/IZET-OzElT9sqMIMbRtPa/: _buildManifest.js
_next/static/ReSvl90IXFhRCGrEgsXb4/: _buildManifest.js
_next/static/Tv-cerep1ZGMkXAb_NzvO/: _buildManifest.js
_next/static/Ybo6Vn9QEfVdEhCxCT8sw/: _buildManifest.js
_next/static/Zs8bMDBduljRfsV9kGuv7/: _buildManifest.js
_next/static/dFDrpjZ8HtD7P9qNdcDuD/: _buildManifest.js
_next/static/g54qCqu0Wt4MFDw-jxjth/: _buildManifest.js
_next/static/jMQyo5io_eiSFVg3q7vYv/: _buildManifest.js
components/: ListItem.js  MarkupLink.js  Page.js
content/articles/: django-admin-actions-should-be-forms.md  django-template-components-without-react.md  readme-as-homepage.md  state-as-timestamp-query-as-boolean.md  static-websites-are-enough.md
lib/: markdown.js
pages/: _app.js  _document.js  index.jinja2  index.js
pages/_layouts/: base.jinja2
public/static/css/: main.css
scripts/: vercel-build.sh
src/builder/: __main__.py  app.py  build.py  content.py  jinja.py  main.py  markdown.py  pages.py  serve.py  tasks.py  utils.py
src/data/: person.json
static/css/: main.css
styles/: Home.module.css  globals.css
tests/: test_builder.py
(+21 files in other folders)
