[project]
    name = "mariocesar-xyz"
    version = "0.1.0"
    description = "Static site builder for mariocesar.xyz"
    readme = "README.md"
    requires-python = ">=3.11"
    dependencies = [
        "jinja2>=3.1.6",
        "markdown>=3.9",
        "mdx-truly-sane-lists>=1.3",
        "pyyaml>=6.0.3",
    ]

[dependency-groups]
    dev = [
        "pytest>=8.3.0",
    ]

[tool.hatch.build.targets.wheel]
    packages = ["src/builder"]

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"
